test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/label_token.plx
pub fn main(none) i32 {
    jump _foo_1_ #  a label may include numbers and underscores
    return 0
    label _foo_1_
    return 1
}
