test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/goto_without_label.plx
pub fn main(none) i32 {
    jump
    label lbl
    return 0
}
